--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "IM-FE-third-party",
+  "name": "third-party",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --base-href='/IM-FE-third-party/'",
+    "build": "ng build --base-href='/third-party/'",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "run:all": "node node_modules/@angular-architects/module-federation/src/server/mf-dev-server.js"
